--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,10 @@
 version: '3'
 
 services:
-  pg-master:
-    container_name: "${COMPOSE_PROJECT_NAME:-pg}-master"
+  postgres:
+    container_name: "${COMPOSE_PROJECT_NAME:-pg}"
     image: dmed/riwaq-pg-realtime-postgres
     ports: ["${PG_EXTERNAL_PORT:-5432}:5432"]
-    labels: ["com.citusdata.role=Master"]
     command:
       - "postgres"
       - "-c"
@@ -24,22 +23,6 @@ services:
       PGUSER: "${POSTGRES_USER:-postgres}"
       PGPASSWORD: "${POSTGRES_PASSWORD}"
       POSTGRES_HOST_AUTH_METHOD: "${POSTGRES_HOST_AUTH_METHOD:-trust}"
-  pg-worker:
-    image: dmed/riwaq-pg-realtime-postgres
-    labels: ["com.citusdata.role=Worker"]
-    depends_on: [manager]
-    environment: *AUTH
-    command: "/wait-for-manager.sh"
-    volumes:
-      - healthcheck-volume:/healthcheck
-  pg-manager:
-    container_name: "${COMPOSE_PROJECT_NAME:-pg}-manager"
-    image: "citusdata/membership-manager:0.3.0"
-    volumes:
-      - "${DOCKER_SOCK:-/var/run/docker.sock}:/var/run/docker.sock"
-      - healthcheck-volume:/healthcheck
-    depends_on: [master]
-    environment: *AUTH
 
   riwaq-pg:
     image: dmed/riwaq-pg-server
